@@ -1,0 +1,12 @@
+package db.model;
+
+import io.jboot.db.annotation.Table;
+import db.model.base.BaseArticle;
+
+/**
+ * Generated by Jboot.
+ */
+@Table(tableName = "article", primaryKey = "id")
+public class Article extends BaseArticle<Article> {
+	
+}
