@@ -1,0 +1,12 @@
+package db.model;
+
+import io.jboot.db.annotation.Table;
+import db.model.base.BaseUser;
+
+/**
+ * Generated by Jboot.
+ */
+@Table(tableName = "user", primaryKey = "id")
+public class User extends BaseUser<User> {
+	
+}
