@@ -1,0 +1,44 @@
+package db.model.base;
+
+import io.jboot.db.model.JbootModel;
+import com.jfinal.plugin.activerecord.IBean;
+
+/**
+ * Generated by Jboot, do not modify this file.
+ */
+@SuppressWarnings("serial")
+public abstract class BaseArticle<M extends BaseArticle<M>> extends JbootModel<M> implements IBean {
+
+	public void setId(java.lang.Long id) {
+		set("id", id);
+	}
+	
+	public java.lang.Long getId() {
+		return getLong("id");
+	}
+
+	public void setTitle(java.lang.String title) {
+		set("title", title);
+	}
+	
+	public java.lang.String getTitle() {
+		return getStr("title");
+	}
+
+	public void setContent(java.lang.String content) {
+		set("content", content);
+	}
+	
+	public java.lang.String getContent() {
+		return getStr("content");
+	}
+
+	public void setThumbnail(java.lang.String thumbnail) {
+		set("thumbnail", thumbnail);
+	}
+	
+	public java.lang.String getThumbnail() {
+		return getStr("thumbnail");
+	}
+
+}
