@@ -1,0 +1,36 @@
+package db.model.base;
+
+import io.jboot.db.model.JbootModel;
+import com.jfinal.plugin.activerecord.IBean;
+
+/**
+ * Generated by Jboot, do not modify this file.
+ */
+@SuppressWarnings("serial")
+public abstract class BaseUser<M extends BaseUser<M>> extends JbootModel<M> implements IBean {
+
+	public void setId(java.lang.Long id) {
+		set("id", id);
+	}
+	
+	public java.lang.Long getId() {
+		return getLong("id");
+	}
+
+	public void setLoginName(java.lang.String loginName) {
+		set("login_name", loginName);
+	}
+	
+	public java.lang.String getLoginName() {
+		return getStr("login_name");
+	}
+
+	public void setPassword(java.lang.String password) {
+		set("password", password);
+	}
+	
+	public java.lang.String getPassword() {
+		return getStr("password");
+	}
+
+}
