@@ -1,3 +1,7 @@
+jboot-1.6.8:
+新增：Columns 查询支持 is null 和 is not null 的支持
+
+
 jboot-1.6.7:
 优化：JbootModel支持FindFirstOrderBy功能
 优化：JbootPaginateDirective支持扩展getPage功能
